--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "gulp-uglify": "^1.4.1"
   },
   "dependencies": {
+    "browser-sync": "^2.18.8",
+    "dotenv": "^1.2.0",
     "forever": "^0.15.1",
     "ioredis": "^1.13.0",
-    "socket.io": "^1.3.7",
-    "dotenv": "^1.2.0"
+    "socket.io": "^1.3.7"
   }
 }
