--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "SpaceX Stats 4",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
