--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 /node_modules
 .env
 
+# Dev tools (Ansible, NPM...)
+*.retry
+worker.log
+npm-debug.log
+
 #sftp deployment script
 sftp_deploy.txt
 sftp_deploy_sync.txt
@@ -13,7 +18,7 @@ sftp_deploy_dev.txt
 sftp_deploy_sync_dev.txt
 WinSCP.ini
 
-#frontend app stuff
+# Frontend app stuff
 /resources/assets/development
 /public/media
 /.sass-cache
@@ -30,5 +35,3 @@ test.log
 _ide_helper.php
 
 /.vagrant
-worker.log
-npm-debug.log
