--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
-        "laravel/homestead": "^3.0"
+        "phpspec/phpspec": "~2.1"
     },
     "autoload": {
         "classmap": [
