--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "SpaceXStats",
   "version": "0.1.0-beta",
-  "description": "SpaceX Stats 4",
+  "description": "SpaceXStats",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
