--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 # App
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=null
+APP_KEY=xuNHrfPyAtqvkJmngPsTdcZL16Ytfr3e
 
 # Drivers
 CACHE_DRIVER=file
@@ -16,8 +16,8 @@ QUEUE_DRIVER=sync
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_DATABASE=spacexstats
-DB_USERNAME=null
-DB_PASSWORD=null
+DB_USERNAME=spacexstats
+DB_PASSWORD=spacexstats
 
 DB_READ_USERNAME=null
 DB_READ_PASSWORD=null
