beginning work on capsule reuse

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     server_name spacexstats.com;
     return 301 https://spacexstats.com$request_uri;
+    sendfile off;
 }
 
 server {
@@ -42,4 +43,5 @@ server {
     }
 
     client_max_body_size 1024M;
+    sendfile off;
 }
